--- a/src/app/features/member/components/member-list/member-list.component.html
+++ b/src/app/features/member/components/member-list/member-list.component.html
@@ -1,1 +1,7 @@
-<h1><button (click)="getAllMembers()">member-list works!</button></h1>
+<div class="container">
+  <app-table-header></app-table-header>
+  <app-table-body></app-table-body>
+  <app-table-footer></app-table-footer>
+
+</div>
+
