--- a/src/app/features/member/components/member-list/table-header/table-header.component.html
+++ b/src/app/features/member/components/member-list/table-header/table-header.component.html
@@ -4,6 +4,9 @@
   </div>
   <div class="right-section">
     <button class="action-button primary">
+      <i class="bi bi-plus"></i> Ajouter un membre
+    </button>
+    <button class="action-button">
       <i class="bi bi-download"></i> Importer
     </button>
     <button class="action-button">
