--- a/src/app/features/member/components/member-list/table-body/table-body.component.html
+++ b/src/app/features/member/components/member-list/table-body/table-body.component.html
@@ -19,7 +19,7 @@
 
     </thead>
     <tbody>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -34,7 +34,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -49,7 +49,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -64,7 +64,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -79,7 +79,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -94,7 +94,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -109,7 +109,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -124,7 +124,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -139,7 +139,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -154,7 +154,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -169,7 +169,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -184,7 +184,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -199,7 +199,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -214,7 +214,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -229,7 +229,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -244,7 +244,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -259,7 +259,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -274,7 +274,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -289,7 +289,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -304,7 +304,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -319,7 +319,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -334,7 +334,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -349,7 +349,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
@@ -364,7 +364,7 @@
         <button class="btn btn-action">Voir</button>
       </td>
     </tr>
-    <tr>
+    <tr (click)="navigateToMember('some-id')">
       <th>
         <input
           type="checkbox">
