--- a/src/app/features/member/components/member-list/table-body/table-body.component.scss
+++ b/src/app/features/member/components/member-list/table-body/table-body.component.scss
@@ -39,6 +39,7 @@
     tr {
       border-bottom: 1px solid $color-border;
       transition: background-color 0.2s ease;
+      cursor: pointer;
 
       &:hover {
         background-color: #f9f9f9; // Should be a variable
